--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
@@ -11,7 +16,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '55215bb9-16f4-4c6f-b3c2-eb3bf34f37a6',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'user/Patient.read user/MedicationStatement.read user/MedicationStatement.write'
       });
     </script>
     <div class="spinner">
