--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -17,10 +17,10 @@
     <div id='errors'>
     </div>
     <div id="loading">Loading...</div>
-    <script src='./lib/fhir-client.min.js'></script>
+    <script src='./lib/fhir-client.js'></script>
     <script>
       function ready(smart) {
-        var patient = smart.api.read({type: 'Patient', id: '711924'}).then(function(response) {
+        var patient = smart.api.read({type: 'Patient', id: '4342008'}).then(function(response) {
          document.body.innerText = JSON.stringify(response);
         });
        }
